--- a/bio.html
+++ b/bio.html
@@ -15,5 +15,5 @@
 <p>Researcher and data scientist based in New York. Recent roles: Research Programmer (Merrimack College) and Data Science Intern (Tekurai Inc.). Focus: quantum optimization (QAOA/VQE), healthcare AI, and secure ML.</p>
 </section>
 
-<footer>© <span id="y"></span> Rahatul Ashakin • GitHub Pages</footer></div>
+<footer>© <span id="y"></span> Rahatul Ashakin </footer></div>
 <script>document.getElementById('y').textContent=new Date().getFullYear()</script></body></html>
